fixed navbar and warning and errors from devtools and fixed card sizes and added scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,17 @@ body {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* customize scrollbar movie description */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4B5563; 
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
